--- a/package.json
+++ b/package.json
@@ -28,39 +28,35 @@
     "test": "ng test -- --no-watch --code-coverage --no-progress --browsers=ChromeHeadlessCI"
   },
   "dependencies": {
-    "tslib": "^1.9.3"
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.11.1",
-    "@angular-devkit/build-ng-packagr": "^0.11.0",
-    "@angular/cli": "^7.1.0",
-    "@angular/common": "^7.1.3",
-    "@angular/compiler": "^7.1.1",
-    "@angular/compiler-cli": "^7.1.1",
-    "@angular/core": "^7.1.1",
-    "@angular/platform-browser": "^7.1.3",
-    "@angular/platform-browser-dynamic": "^7.1.1",
+    "@angular-devkit/build-angular": "~0.901.0",
+    "@angular-devkit/build-ng-packagr": "~0.901.0",
+    "@angular/cli": "^9.1.0",
+    "@angular/common": "^9.1.0",
+    "@angular/compiler": "^9.1.0",
+    "@angular/compiler-cli": "^9.1.0",
+    "@angular/core": "^9.1.0",
+    "@angular/platform-browser": "^9.1.0",
+    "@angular/platform-browser-dynamic": "^9.1.0",
     "@types/jasmine": "^3.3.1",
-    "@types/node": "^10.12.12",
-    "codelyzer": "^4.5.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "coveralls": "^3.0.2",
     "jasmine-core": "^3.3.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^3.1.3",
-    "karma-chrome-launcher": "^2.2.0",
+    "jasmine-spec-reporter": "^5.0.1",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "^2.0.1",
+    "karma-jasmine": "^3.1.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "nyc": "^14.1.1",
-    "ng-packagr": "^4.4.0",
+    "nyc": "^15.0.1",
+    "ng-packagr": "^9.0.0",
     "rxjs": "^6.3.3",
-    "ts-node": "^7.0.1",
-    "tsickle": "^0.34.0",
-    "typescript": "3.2.4",
-    "zone.js": "^0.8.26"
+    "ts-node": "^8.8.1",
+    "typescript": "3.8.3",
+    "zone.js": "~0.10.2"
   },
-  "peerDependencies": {
-    "@angular/common": "*",
-    "@angular/core": "*"
-  }
+  "peerDependencies": {}
 }
