Updates dependencies to Angular 10

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-printx",
-  "version": "1.0.0-beta1",
+  "version": "1.0.0-beta5",
   "description": "Plug n' Play Angular (2+) directive to print your stuff",
   "author": "https://github.com/pavankjadda/ngx-printx/graphs/contributors",
   "repository": {
@@ -28,34 +28,34 @@
     "test": "ng test -- --no-watch --code-coverage --no-progress --browsers=ChromeHeadlessCI"
   },
   "dependencies": {
-    "tslib": "^1.10.0"
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.0",
-    "@angular-devkit/build-ng-packagr": "~0.901.0",
-    "@angular/cli": "^9.1.0",
-    "@angular/common": "^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/compiler-cli": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@types/jasmine": "^3.3.1",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "coveralls": "^3.0.2",
-    "jasmine-core": "^3.3.0",
-    "jasmine-spec-reporter": "^5.0.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "nyc": "^15.0.1",
-    "ng-packagr": "^9.0.0",
-    "rxjs": "^6.3.3",
-    "ts-node": "^8.8.1",
-    "typescript": "3.8.3",
+    "@angular-devkit/build-angular": "~0.1000.1",
+    "@angular-devkit/build-ng-packagr": "~0.1000.1",
+    "@angular/cli": "^10.0.1",
+    "@angular/common": "^10.0.3",
+    "@angular/compiler": "^10.0.3",
+    "@angular/compiler-cli": "^10.0.3",
+    "@angular/core": "^10.0.3",
+    "@angular/platform-browser": "^10.0.3",
+    "@angular/platform-browser-dynamic": "^10.0.3",
+    "@types/jasmine": "^3.5.11",
+    "@types/node": "^14.0.20",
+    "codelyzer": "^6.0.0",
+    "coveralls": "^3.1.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "nyc": "^15.1.0",
+    "ng-packagr": "^10.0.0",
+    "rxjs": "^6.6.0",
+    "ts-node": "^8.10.2",
+    "typescript": "3.9.6",
     "zone.js": "~0.10.2"
   },
   "peerDependencies": {}
